--- a/templates/seasonalMood.html
+++ b/templates/seasonalMood.html
@@ -48,8 +48,8 @@
 
         .center-record {
             position: absolute;
-            top: 25%;
-            left: calc(50% - 250px);
+            top: 200px;
+            left: calc(50% - 260px);
             width: 500px;
             height: 500px;
             background-image: url("{% static 'seasonalMood/center_record.png' %}"); /* Replace with correct image path */
@@ -62,109 +62,132 @@
             font-size: 24px;
             font-weight: bold;
             text-align: center;
-    }
+        }
 
-    /* Small Record Positions */
-    .small-record {
-        width: 100px;
-        height: 100px;
-        background-size: cover;
-        border-radius: 50%;
-    }
+        .record-image {
+            width: 150px;
+            height: 150px;
+            position: absolute;
+            top: 365px;
+            left: calc(50% - 75px);
+            z-index: 10;
+            border-radius: 100px;
 
-    .small-record-container {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        position: absolute;
-        gap: 15px; /* Space between record and text */
-    }
+            /* FIX THE IMAGE BY GETTING IT OUT OF THE RECORD DIV*/
+        }
 
-    .small-record-text {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
 
-    }
+        /* Small Record Positions */
+        .small-record {
+            width: 100px;
+            height: 100px;
+            background-size: cover;
+            border-radius: 50%;
+        }
 
-    .small-record-song {
-        font-family: 'Notable', sans-serif;
-        color: #000000;
-        font-size: 24px;
-    }
+        .small-record-container {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            position: absolute;
+            gap: 15px; /* Space between record and text */
+        }
 
-    .small-record-artist {
-        font-family: 'Radio Canada', sans-serif;
-        color: #000000;
-        font-size: 16px;
-    }
+        .small-record-text {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
 
-    .small-record-container1 {
-        top: 200px;
-        left: calc(50% - 500px);
-    }
+        }
 
-    /* Specific positions for small records */
-    .small-record1 {
-        background-image: url("{% static 'seasonalMood/red_record.png' %}");
-    }
+        .small-record-mood {
+            font-family: 'Notable', sans-serif;
+            color: #000000;
+            font-size: 24px;
+            width: 150px;
+            /*margin-right: 30px;*/
+        }
 
-    .small-record-container2 {
-        top: 200px;
-        right: calc(50% - 500px);
-    }
+        .small-record-artist {
+            font-family: 'Radio Canada', sans-serif;
+            color: #000000;
+            font-size: 16px;
+            width: 150px;
+            /*margin-right: 30px;*/
+        }
 
-    .small-record2 {
-        background-image: url("{% static 'seasonalMood/yellow_record.png' %}");
-    }
+        .small-record-container1 {
+            top: 200px;
+            left: calc(50% - 500px);
+        }
 
-    .small-record-container3 {
-        top: 400px;
-        left: calc(50% - 650px);
-    }
+        /* Specific positions for small records */
+        .small-record1 {
+            background-image: url("{% static 'seasonalMood/red_record.png' %}");
+        }
 
-    .small-record3 {
-        background-image: url("{% static 'seasonalMood/blue_record.png' %}");
-        top: 400px;
-    }
+        .small-record-container2 {
+            top: 200px;
+            right: calc(50% - 500px);
+        }
 
-    .small-record-container4 {
-        top: 400px;
-        right: calc(50% - 650px);
-    }
+        .small-record2 {
+            background-image: url("{% static 'seasonalMood/yellow_record.png' %}");
+        }
 
-    .small-record4 {
-        background-image: url("{% static 'seasonalMood/red_record.png' %}");
-        top: 50%;
-        right: 10%;
-    }
+        .small-record-container3 {
+            top: 400px;
+            left: calc(50% - 650px);
+        }
 
-    .small-record-container5 {
-        top: 600px;
-        left: calc(50% - 500px);
-    }
+        .small-record3 {
+            background-image: url("{% static 'seasonalMood/blue_record.png' %}");
+            top: 400px;
+        }
 
-    .small-record5 {
-        background-image: url("{% static 'seasonalMood/yellow_record.png' %}");
-        top: 75%;
-        left: 20%;
-    }
+        .small-record-container4 {
+            top: 400px;
+            right: calc(50% - 650px);
+        }
 
-    .small-record-container6 {
-        top: 600px;
-        right: calc(50% - 500px);
-    }
+        .small-record4 {
+            background-image: url("{% static 'seasonalMood/red_record.png' %}");
+            top: 50%;
+            right: 10%;
+        }
 
-    .small-record6 {
-        background-image: url("{% static 'seasonalMood/blue_record.png' %}");
-        top: 75%;
-        right: 20%;
-    }
+        .small-record-container5 {
+            top: 600px;
+            left: calc(50% - 500px);
+        }
+
+        .small-record5 {
+            background-image: url("{% static 'seasonalMood/yellow_record.png' %}");
+            top: 75%;
+            left: 20%;
+        }
+
+        .small-record-container6 {
+            top: 600px;
+            right: calc(50% - 500px);
+        }
+
+        .small-record6 {
+            background-image: url("{% static 'seasonalMood/blue_record.png' %}");
+            top: 75%;
+            right: 20%;
+        }
+
+        .small-record-container2, .small-record-container4, .small-record-container6 {
+
+            text-align: right; /* Align text within the text container */
+        }
 
     </style>
 
     <img src="{% static 'topArtist/top_left_corner_rainbow.png' %}" class="top-corner-rainbow">
 
+    <img src={{image}} class="record-image">
 
     <div class="center-record">
         <svg width="400" height="400" viewBox="0 0 400 400">
@@ -200,7 +223,7 @@
     <div class="small-record-container small-record-container1">
         <div class="small-record small-record1"></div>
         <div class="small-record-text">
-            <div class="small-record-song">{{mood1}}</div>
+            <div class="small-record-mood">{{mood1}}</div>
             <div class="small-record-artist">{{song_artist1}}</div>
         </div>
     </div>
@@ -208,7 +231,7 @@
 
     <div class="small-record-container small-record-container2">
         <div class="small-record-text">
-            <div class="small-record-song">{{mood2}}</div>
+            <div class="small-record-mood">{{mood2}}</div>
             <div class="small-record-artist">{{song_artist2}}</div>
         </div>
         <div class="small-record small-record2"></div>
@@ -217,14 +240,14 @@
     <div class="small-record-container small-record-container3">
         <div class="small-record small-record3"></div>
         <div class="small-record-text">
-            <div class="small-record-song">{{mood3}}</div>
+            <div class="small-record-mood">{{mood3}}</div>
             <div class="small-record-artist">{{song_artist3}}</div>
         </div>
     </div>
 
     <div class="small-record-container small-record-container4">
         <div class="small-record-text">
-            <div class="small-record-song">{{mood4}}</div>
+            <div class="small-record-mood">{{mood4}}</div>
             <div class="small-record-artist">{{song_artist4}}</div>
         </div>
         <div class="small-record small-record4"></div>
@@ -233,14 +256,14 @@
     <div class="small-record-container small-record-container5">
         <div class="small-record small-record5"></div>
         <div class="small-record-text">
-            <div class="small-record-song">{{mood5}}</div>
+            <div class="small-record-mood">{{mood5}}</div>
             <div class="small-record-artist">{{song_artist5}}</div>
         </div>
     </div>
 
     <div class="small-record-container small-record-container6">
         <div class="small-record-text">
-            <div class="small-record-song">{{mood6}}</div>
+            <div class="small-record-mood">{{mood6}}</div>
             <div class="small-record-artist">{{song_artist6}}</div>
         </div>
         <div class="small-record small-record6"></div>
