linked slide2 and slide3

--- a/templates/slide_2.html
+++ b/templates/slide_2.html
@@ -215,7 +215,11 @@
             </div>
         </div>
 
-    <img src="{% static 'topArtist/triangle_button.png' %}" class="forward-triangle-button" alt="Forward Button">
+    <a href="{% url 'slide_3' %}">
+        <img src="{% static 'topArtist/triangle_button.png' %}" class="forward-triangle-button" alt="Forward Button">
+    </a>
+
+
 
     <div class="circle-container">
         <div class="small-circle"></div>
