holiday emplates for graph and night owl

--- a/templates/halloween_graph.html
+++ b/templates/halloween_graph.html
@@ -178,15 +178,15 @@
 
                 <div class="chart-legend">
                     <div class="artist">
-                        <img src="{% static 'slide_2/salmon_record.png' %}" class="artist-record">
+                        <img src="{% static 'slide_2/removed_gold.png' %}" class="artist-record">
                         <label class="artist-label">{{artist1}}</label>
                     </div>
                     <div class="artist">
-                        <img src="{% static 'slide_2/gold_record.png' %}" class="artist-record">
+                        <img src="{% static 'slide_2/removed_gold.png' %}" class="artist-record">
                         <label class="artist-label">{{artist2}}</label>
                     </div>
                     <div class="artist">
-                        <img src="{% static 'slide_2/teal_record.png' %}" class="artist-record">
+                        <img src="{% static 'slide_2/removed_gold.png' %}" class="artist-record">
                         <label class="artist-label">{{artist3}}</label>
                     </div>
                 </div>
