Linked slide3 and slide4 together

--- a/templates/seasonalMood.html
+++ b/templates/seasonalMood.html
@@ -301,7 +301,9 @@
 
     <img src="{% static 'topArtist/triangle_button.png' %}" class="backward-triangle-button" alt="Forward Button">
 
-    <img src="{% static 'topArtist/top_left_corner_rainbow.png' %}" class="bottom-corner-rainbow">
+    <a href="{% url 'slide_3' %}">
+                <img src="{% static 'topArtist/triangle_button.png' %}" class="backward-triangle-button" alt="Forward Button">
+    </a>
 
     {% endblock %}
 </body>
