--- a/templates/slide_3.html
+++ b/templates/slide_3.html
@@ -262,6 +262,29 @@
                 });
             })
             </script>
+
+            <a href="{% url 'analyze_seasonal_mood' %}">
+                <img src="{% static 'topArtist/triangle_button.png' %}" class="forward-triangle-button" alt="Forward Button">
+            </a>
+
+
+
+            <div class="circle-container">
+                <div class="small-circle"></div>
+                <div class="small-circle"></div>
+                <div class="darker-small-circle"></div>
+                <div class="small-circle"></div>
+                <div class="small-circle"></div>
+                <div class="small-circle"></div>
+                <div class="small-circle"></div>
+                <div class="small-circle"></div>
+            </div>
+            </div>
+
+            <a href="{% url 'slide_2' %}">
+                <img src="{% static 'topArtist/triangle_button.png' %}" class="backward-triangle-button" alt="Backward Button">
+            </a>
+
         </div>
     {% endblock %}
 </body>
