changed title color

--- a/templates/slide_3.html
+++ b/templates/slide_3.html
@@ -58,7 +58,7 @@
             }
 
             body.dark-mode .slide-title {
-                color: #273567;
+                color: #5AABF3;
                 text-shadow: 1px 1px aliceblue;
             }
 
