--- a/templates/base.html
+++ b/templates/base.html
@@ -301,7 +301,7 @@
             container.classList.toggle('sidebar-active');
         }
 
-        document.getElementById('dark-mode-btn').onclick = function() {
+        document.getElementById('dark-mode-btn').onclick = function () {
             document.body.classList.toggle('dark-mode');
 
             if (document.body.classList.contains('dark-mode')) {
@@ -312,16 +312,31 @@
                 console.log("dark mode off");
                 console.log(localStorage.getItem('dark_mode'));
             }
+
+            const rainbows = document.getElementsByClassName('rainbow');
+            const dark_mode = localStorage.getItem('dark_mode') === 'on';
+            if (dark_mode) {
+                for (let i = 0; i < rainbows.length; i++) {
+                    rainbows[i].src = "{% static 'slide_2/dark_mode_rainbow.png' %}";
+                }
+            } else {
+                for (let i = 0; i < rainbows.length; i++) {
+                    rainbows[i].src = "{% static 'slide_2/top_left_corner_rainbow.png' %}";
+                }
+            }
         };
 
-        document.addEventListener("DOMContentLoaded", function() {
+        document.addEventListener("DOMContentLoaded", function () {
+            const rainbows = document.getElementsByClassName('rainbow');
             if (localStorage.getItem('dark_mode') === 'on') {
                 document.body.classList.add('dark-mode');
                 console.log('dark mode on');
-                // add dark mode to all items
+                for (let i = 0; i < rainbows.length; i++) {
+                    rainbows[i].src = "{% static 'slide_2/dark_mode_rainbow.png' %}"
+                }
             }
-        })
-        </script>
+        });
+    </script>
 
     <div class="container">
         {% block content %}
