added rainbow class for dark mode

--- a/templates/topArtistAndSongs.html
+++ b/templates/topArtistAndSongs.html
@@ -211,7 +211,7 @@
 
     </style>
 
-    <img src="{% static 'topArtist/top_left_corner_rainbow.png' %}" class="top-corner-rainbow">
+    <img src="{% static 'topArtist/top_left_corner_rainbow.png' %}" class="top-corner-rainbow rainbow">
 
     <!-- Page Title -->
     <div class="page-title">
@@ -295,7 +295,7 @@
 
     <img src="{% static 'topArtist/triangle_button.png' %}" class="backward-triangle-button" alt="Forward Button">
 
-    <img src="{% static 'topArtist/top_left_corner_rainbow.png' %}" class="bottom-corner-rainbow">
+    <img src="{% static 'topArtist/top_left_corner_rainbow.png' %}" class="bottom-corner-rainbow rainbow">
 
     {% endblock %}
 </body>
