invert bottom button colors in dark mode

--- a/templates/base.html
+++ b/templates/base.html
@@ -266,11 +266,20 @@
             border-radius: 50%;
         }
 
+        body.dark-mode .small-circle {
+            background-color: dimgray;
+        }
+
+
         .darker-small-circle {
             width: 8px;
             height: 8px;
             background-color: dimgray;
             border-radius: 50%;
+        }
+
+        body.dark-mode .darker-small-circle {
+            background-color: #d3d3d3;
         }
 
 
