--- a/templates/topArtistAndSongs.html
+++ b/templates/topArtistAndSongs.html
@@ -76,7 +76,7 @@
         /* Combined Title Styling */
         .page-title {
             font-size: 20px;
-            color: #D24E0D;
+            color: #C64036;
             margin-bottom: 20px;
             text-align: center;
             margin-top: 20px;
@@ -88,7 +88,6 @@
             justify-content: space-between; /* Artist on left, songs on right */
             width: 100%;
             max-width: 1200px;
-            margin: 0 auto;
             padding: 20px;
         }
 
@@ -275,7 +274,7 @@
                         <p>Chris Stapleton</p>
                     </div>
 
-                    <div class="vinyl-icon-yellow"></div>
+                    <div class="vinyl-icon-yellow" style="width:150px;margin-left:-30px;"></div>
                 </div>
 
                 <div class="song">
