--- a/templates/slide_3.html
+++ b/templates/slide_3.html
@@ -15,7 +15,7 @@
 <body>
 
     {% block content %}
-        <script
+        <scriptn 
             src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js">
         </script>
 
@@ -157,7 +157,15 @@
         <img src="{% static 'slide_3/top_left_corner_rainbow.png' %}" alt="Rainbow" class="top-left">
         <img src="{% static 'slide_3/top_left_corner_rainbow.png' %}" alt="Rainbow" class="bottom-left">
 
-        <div class="slide-title">Night Owl</div>
+        <div class="slide-title">
+            {% if language == "english" %}
+                Night Owl
+            {% elif language == "hindi" %}
+                रात का पंछी
+            {% elif language == "mandarin" %}
+                夜猫子
+            {% endif %}
+        </div>
         <div class="overall-page">
             <div class="left-section">
                 <img src="{% static 'slide_3/clock_base.png' %}" alt="Clock" id="clock-base">
@@ -165,12 +173,28 @@
                 <div class="hour-hand"> </div>
                 <div class="circle"> </div>
                 <h1 class="latest-time">{{latest_time}}</h1>
-                <p>the latest time you were<br>listening to music recently</p>
+                <p>
+                    {% if language == "english" %}
+                        the latest time you were<br>listening to music recently
+                    {% elif language == "hindi" %}
+                        हाल ही में आप सबसे देर तक<br>संगीत सुन रहे थे
+                    {% elif language == "mandarin" %}
+                        您最近最晚<br>听音乐的时间
+                    {% endif %}
+                </p>
             </div>
             <div class="right-section">
                 <h1 class="total-minutes">{{total_minutes}} minutes</h1>
                 <canvas id="hoursBarGraph" style="width:100%;max-width:800px"></canvas>
-                <p>the amount of minutes of music you listened to recently...</p>
+                <p>
+                    {% if language == "english" %}
+                        the amount of minutes of music you listened to recently...
+                    {% elif language == "hindi" %}
+                        हाल ही में आपने कितने मिनट संगीत सुना...
+                    {% elif language == "mandarin" %}
+                        您最近听音乐的分钟数...
+                    {% endif %}
+                </p>
             </div>
 
             <script>
@@ -183,25 +207,33 @@
                 const range4 = ranges[3];
                 const datasets = [
                     {
-                        label: "Midnight to 6 AM",
+                        label: language === "english" ? "Midnight to 6 AM" : 
+                            language === "hindi" ? "रात 12 बजे से सुबह 6 बजे तक" : 
+                            "午夜至早上6点",
                         data: [time_ranges[range1]],
                         backgroundColor: "#2A9D90",
                         fill: true,
                     },
                     {
-                        label: "6 AM to Noon",
+                        label: language === "english" ? "6 AM to Noon" : 
+                            language === "hindi" ? "सुबह 6 बजे से दोपहर तक" : 
+                            "早上6点至中午",
                         data: [time_ranges[range2]],
                         backgroundColor: "#E99F99",
                         fill: true,
                     },
                     {
-                        label: "Noon to 6 PM",
+                        label: language === "english" ? "Noon to 6 PM" : 
+                            language === "hindi" ? "दोपहर से शाम 6 बजे तक" : 
+                            "中午至下午6点",
                         data: [time_ranges[range3]],
                         backgroundColor: "#5AABF3",
                         fill: true,
                     },
                     {
-                        label: "6 PM to Midnight",
+                        label: language === "english" ? "6 PM to Midnight" : 
+                            language === "hindi" ? "शाम 6 बजे से रात 12 बजे तक" : 
+                            "下午6点至午夜",
                         data: [time_ranges[range4]],
                         backgroundColor: "#E9C999",
                         fill: true,
@@ -243,7 +275,9 @@
                                 },
                                 scaleLabel: {
                                     display: true,
-                                    labelString: "Minutes Listened",
+                                    labelString: language === "english" ? "Minutes Listened" : 
+                                                language === "hindi" ? "सुने गए मिनट" : 
+                                                "收听分钟数",
                                     fontFamily: 'Notable',
                                     fontColor: "#473924",
                                     fontSize: 20,
