--- a/templates/reset.html
+++ b/templates/reset.html
@@ -1,3 +1,5 @@
+{% extends 'base.html' %}
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,6 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reset Password</title>
     <link href="https://fonts.googleapis.com/css2?family=Notable&display=swap" rel="stylesheet">
+</head>
+<body>
+
+    {% block content %}
+
     <style>
         * {
             margin: 0;
@@ -25,7 +32,7 @@
         }
 
         .reset-container {
-            background-color: white;
+            background-color: rgb(198, 195, 195);
             padding: 30px;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -86,8 +93,6 @@
             text-decoration: underline;
         }
     </style>
-</head>
-<body>
 
     <div class="reset-container">
         <h2>Reset Your Password</h2>
@@ -108,6 +113,7 @@
             <a href="{% url 'login' %}">Back to Login</a>
         </div>
     </div>
+    {% endblock %}
 
 </body>
 </html>
