Revert "Holiday templates"

--- a/templates/LLMinsights.html
+++ b/templates/LLMinsights.html
@@ -73,7 +73,7 @@
         /* Combined Title Styling */
         .page-title {
             font-size: 24px;
-            color: #C64036;
+            color: #D24E0D;
             margin-bottom: 20px;
             text-align: center;
             margin-top: 10px;
@@ -186,16 +186,6 @@
 
 
     </style>
-
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            if (localStorage.getItem('dark_mode') === 'on') {
-                document.body.classList.add('dark-mode');
-                console.log('dark mode on');
-            }
-        })
-    </script>
-
     <!-- Page Title -->
     <div class="page-title">
         <h1>LLM Insights</h1>
