make input white when in dark mode

--- a/templates/login.html
+++ b/templates/login.html
@@ -101,6 +101,10 @@
             margin-top: 20px;
         }
 
+        body.dark-mode .form-group label {
+            color: white;
+        }
+
         .form-group {
             margin-bottom: 15px;
             display: flex;
